@@ -10,7 +10,6 @@ buildscript {
 subprojects {
 
     def scalaVersionLookup = [
-        '2.10': '2.10.5',
         '2.11': '2.11.7'
     ]
 
@@ -39,31 +38,33 @@ subprojects {
     dependencies {
       if (project.hasProperty('scalaVersion')) {
           compile 'org.slf4j:slf4j-api:1.7.7', "org.scala-lang:scala-library:${project.scalaFullVersion}",
+                  "com.typesafe.scala-logging:scala-logging_${project.scalaVersion}:3.1.0",
                   "org.json4s:json4s-native_${project.scalaVersion}:3.2.11",
                   "org.json4s:json4s-jackson_${project.scalaVersion}:3.2.11"
           testCompile "org.specs2:specs2_${project.scalaVersion}:2.3.13"
 
-          if (project.scalaVersion == '2.11') {
-              compile "org.scala-lang.modules:scala-xml_2.11:1.0.2"
-          }
+          compile "org.scala-lang.modules:scala-xml_2.11:1.0.2"
       }
 
       testCompile 'org.hamcrest:hamcrest-all:1.3', 'org.mockito:mockito-core:1.9.5', 'junit:junit:4.12'
     }
 
     group = 'au.com.dius'
-    version = '2.2.12'
-    targetCompatibility = '1.6'
-    sourceCompatibility = '1.6'
+    version = '3.0.1'
+    targetCompatibility = '1.8'
+    sourceCompatibility = '1.8'
 
     tasks.withType(ScalaCompile) {
         scalaCompileOptions.useCompileDaemon = false
         scalaCompileOptions.useAnt = false
-        scalaCompileOptions.additionalParameters = ['-target:jvm-1.6']
+        scalaCompileOptions.additionalParameters = ['-target:jvm-1.8']
         configure(scalaCompileOptions.forkOptions) {
           memoryMaximumSize = '700m'
-          jvmArgs = ['-XX:MaxPermSize=512m']
         }
+    }
+
+    tasks.withType(GroovyCompile) {
+      groovyOptions.optimizationOptions.indy = true
     }
 
     jar {
